# dnd_character_cli

./: Cargo.toml
src/: cli_printer.rs  data.rs  main.rs  rolls.rs  structures.rs
src/data/: class_data.rs  data_handler.rs  json.rs  race_data.rs
src/data/class_data/: multiclass.rs
src/structures/: alignment.rs  character.rs  class.rs  colors.rs  dice.rs  proficiencies.rs  stats.rs
