[package]
name = "dnd_character_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
colored = "2.0.0"
names = "0.12.0"
libmath = "0.2.1"
terminal_size = "0.1.17"
strum = "0.22.0"
strum_macros = "0.22.0"
serde = "1.0.130"
serde_json = "1.0.68"
serde_derive = "1.0.130"